<resources>
    <string name="app_name">Combo Finder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="step_1_desc">Step 1. </string>
    <string name="btn_txt_nxt">Next</string>
    <string name="label_first_lp">First Locked Position</string>
    <string name="label_second_lp">Second Locked Position</string>
    <string name="label_rl">Resistent Position</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="third_picker_desc">Step 2. Pick the One with the Most \"Gives\"</string>
</resources>
