<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_1_desc"
            android:id="@+id/step_1_desc"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_first_lp"
            android:id="@+id/label_first_lp"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:layout_below="@+id/step_1_desc"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/first_lp_q"
            android:contentDescription="1"
            android:src="@drawable/ic_help_black_24dp"
            android:onClick="showHelp"
            android:adjustViewBounds="true"
            android:maxWidth="18dp"
            android:maxHeight="18dp"
            android:scaleType="fitCenter"
            android:layout_marginTop="33dp"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:layout_below="@+id/step_1_desc"
            android:layout_toRightOf="@+id/label_first_lp"
            android:layout_toEndOf="@+id/label_first_lp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Help for first Lock Position"
            android:id="@+id/help_first_lp"
            android:visibility="gone"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/label_first_lp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/first_lp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/help_first_lp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_second_lp"
            android:id="@+id/label_second_lp"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:layout_below="@+id/first_lp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/second_lp_q"
            android:contentDescription="2"
            android:src="@drawable/ic_help_black_24dp"
            android:onClick="showHelp"
            android:adjustViewBounds="true"
            android:maxWidth="18dp"
            android:maxHeight="18dp"
            android:scaleType="fitCenter"
            android:layout_marginTop="33dp"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:layout_below="@+id/first_lp"
            android:layout_toRightOf="@+id/label_second_lp"
            android:layout_toEndOf="@+id/label_second_lp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Help for Second Lock Position"
            android:id="@+id/help_second_lp"
            android:visibility="gone"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/label_second_lp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/second_lp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/help_second_lp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_rl"
            android:id="@+id/label_rl"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:layout_below="@+id/second_lp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rl_q"
            android:contentDescription="3"
            android:src="@drawable/ic_help_black_24dp"
            android:onClick="showHelp"
            android:adjustViewBounds="true"
            android:maxWidth="18dp"
            android:maxHeight="18dp"
            android:scaleType="fitCenter"
            android:layout_marginTop="33dp"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:layout_below="@+id/second_lp"
            android:layout_toRightOf="@+id/label_rl"
            android:layout_toEndOf="@+id/label_rl" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Help for Resistent Location"
            android:id="@+id/help_rl"
            android:visibility="gone"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/label_rl"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/resis_loc"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/help_rl"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/step_1_error"
            android:layout_below="@+id/resis_loc"
            android:textColor="#b94a48"
            android:background="#f2dede"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_txt_nxt"
            android:id="@+id/btn_nxt"
            android:layout_below="@+id/step_1_error"
            android:layout_marginTop="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </RelativeLayout>
</ScrollView>